Fix navigation tabs wrapping issue - display all 5 tabs in single row

--- a/css/main.css
+++ b/css/main.css
@@ -1982,6 +1982,22 @@ body {
 
 
 
+  display: flex;
+
+
+
+  flex-wrap: nowrap;
+
+
+
+  justify-content: center;
+
+
+
+  list-style: none;
+
+
+
   margin: 0;
 
 
@@ -2090,7 +2106,7 @@ body {
 
 
 
-  margin-right: 10px;
+  margin-right: 5px;
 
 
 
@@ -4726,7 +4742,7 @@ Change widths as necessary
 
 
 
-    padding: 10px 40px 10px 40px;
+    padding: 10px 15px 10px 15px;
 
 
 
@@ -7554,6 +7570,22 @@ body {
 
 
 
+  display: flex;
+
+
+
+  flex-wrap: nowrap;
+
+
+
+  justify-content: center;
+
+
+
+  list-style: none;
+
+
+
   margin: 0;
 
 
@@ -7662,7 +7694,7 @@ body {
 
 
 
-  margin-right: 10px;
+  margin-right: 5px;
 
 
 
@@ -10298,7 +10330,7 @@ Change widths as necessary
 
 
 
-    padding: 10px 25px 10px 25px;
+    padding: 10px 15px 10px 15px;
 
 
 
